--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.3.1",
     "react-spring": "^8.0.27",
+    "react-syntax-highlighter": "^12.2.1",
     "theme-ui": "0.2.52"
   },
   "devDependencies": {
