--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@xuzhanhh/gatsby-source-strapi": "^0.0.10",
     "cross-env": "^7.0.0",
     "emotion": "^10.0.27",
     "gatsby": "^2.19.7",
