--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@xuzhanhh/gatsby-source-strapi": "^0.0.10",
+    "autoprefixer": "^10.2.4",
     "cross-env": "^7.0.0",
     "emotion": "^10.0.27",
     "gatsby": "^2.19.7",
@@ -21,6 +22,7 @@
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-plugin-offline": "^3.0.32",
+    "gatsby-plugin-postcss": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-plugin-theme-ui": "^0.3.0",
@@ -29,6 +31,7 @@
     "gatsby-source-strapi": "^0.0.10",
     "gatsby-transformer-sharp": "^2.3.13",
     "polished": "^3.4.4",
+    "postcss": "^8.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -36,6 +39,7 @@
     "react-markdown": "^4.3.1",
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^12.2.1",
+    "tailwindcss": "^2.0.3",
     "theme-ui": "0.2.52"
   },
   "devDependencies": {
