--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "emotion": "^10.0.27",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-algolia": "^0.16.3",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-plugin-offline": "^3.0.32",
