--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@docsearch/react": "^1.0.0-alpha.14",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "@mdx-js/mdx": "^1.5.7",
@@ -14,8 +15,10 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@xuzhanhh/gatsby-source-strapi": "^0.0.10",
+    "algoliasearch": "^4.8.5",
     "autoprefixer": "^10.2.4",
     "cross-env": "^7.0.0",
+    "docsearch.js": "2.6.3",
     "emotion": "^10.0.27",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
@@ -37,7 +40,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^6.9.0",
     "react-markdown": "^4.3.1",
+    "react-modal": "^3.12.1",
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^12.2.1",
     "tailwindcss": "^2.0.3",
