--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "cross-env": "^7.0.0",
     "docsearch.js": "2.6.3",
     "emotion": "^10.0.27",
+    "firebase": "^9.8.3",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-algolia": "^0.16.3",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-plugin-postcss": "^3.7.0",
