--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-algolia": "^0.16.3",
     "gatsby-plugin-firebase": "^0.2.0-beta.4",
+    "gatsby-plugin-google-gtag": "^4.16.0",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-plugin-postcss": "^3.7.0",
